# Pacman

./: CMakeFiles.txt  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  GameMenu.h  GameUtils.h  Gamerule.cpp  Input.cpp  Input.h  Map.cpp  Map.h  Model.h  README.md  Render.cpp  Render.h  ScoreCounter.h  View.h  config.txt  main.cpp
Map/: 1  g
Maps/: 1.txt  2.txt  3.txt  g
docs/: game.md  installation.md  menu.md
include/: Entity.h  Game.h  GameUtils.h  Input.h  Map.h  Render.h
src/: Entity.cpp  Game.cpp  GameMenu.cpp  Input.cpp  Render.cpp
